--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Layout */
+@layer components {
+    @font-face {
+        font-family: "gothic";
+		font-style: normal;
+		font-weight: 400;
+		src: url("../assets/fonts/gothic.ttf") format("truetype");
+    }
+
+    body {
+        font-family: 'Inter Variable', sans-serif;
+        background-color: #E8E8EA;
+    }
+}
