--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,39 +4,41 @@
 
 /* Layout */
 @layer components {
-    @font-face {
-        font-family: "gothic";
+	@font-face {
+		font-family: "gothic";
 		font-style: normal;
 		font-weight: 400;
 		src: url("../assets/fonts/gothic.ttf") format("truetype");
-    }
+	}
 
-    body {
-        font-family: 'Inter Variable', sans-serif;
-        background-color: #E8E8EA;
-    }
-.hover-3 {
-  display: inline-flex;
-  padding-top: 10px;
-  padding-bottom: 5px;
-  overflow: hidden;
-  position: relative; /* Add this to position the :before element relative to this container */
-}
+	body {
+		font-family: "Inter Variable", sans-serif;
+		background-color: #e8e8ea;
+	}
+	.hover-3 {
+		display: inline-flex;
+		padding-top: 10px;
+		padding-bottom: 5px;
+		overflow: hidden;
+		position: relative; /* Add this to position the :before element relative to this container */
+	}
 
-.hover-3:before {
-  content: ""; /* Add this to make the :before element appear */
-  position: absolute; /* Add this to position the :before element */
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background: #492059;
-  transform: translateX(-100%);
-  transition: transform 0.3s ease; /* Add this for smooth transition */
-}
+	.hover-3:before {
+		content: ""; /* Add this to make the :before element appear */
+		position: absolute; /* Add this to position the :before element */
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		height: 2px;
+		background: #492059;
+		transform: translateX(-100%);
+		transition: transform 0.3s ease; /* Add this for smooth transition */
+	}
 
-.hover-3:hover:before {
-  transform: translateX(0);
-}
-
+	.hover-3:hover:before {
+		transform: translateX(0);
+	}
+	.brand__box {
+		@apply justify-center flex flex-col p-6 w-[150px] h-[150px] border-black border-2 border-r-0 items-center;
+	}
 }
