--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,6 +42,8 @@
 		@apply justify-center flex flex-col p-6 w-[150px] h-[150px] border-black border-2 border-r-0 items-center;
 	}
 
+/* Styles for custom visual musings block */
+
 	.highlight {
 		grid-column: 1 / span 1;
 		grid-row: 1 / span 2;
@@ -53,6 +55,30 @@
 	.secondary.smally {
 		img {
 			object-fit: contain;
+		}
+	}
+
+	.image__grid__container {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+		gap: 2rem;
+		margin: 3rem 0;
+	}
+
+	@media only screen and (max-width: 600px) {
+		.image__grid__container {
+			grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+			grid-auto-columns: minmax(320px, 1fr);
+			grid-auto-flow: column;
+			gap: 1rem;
+			overflow-x: scroll;
+			margin: 3rem 0;
+		}
+		.highlight {
+			grid-column: 1;
+			grid-row: 1;
+			white-space: normal;
+			display: inline-block;
 		}
 	}
 }
