--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,6 +81,26 @@
 		display: flex;
 		margin: 2rem auto;
 	} */
+
+	/* Block Quotes */
+	.wp-content-img .wp-block-quote {
+		border-left: 4px solid #ff5757;
+	}
+	.wp-content-img .wp-block-quote p {
+		font-size: 1.5rem;
+		font-weight: 400;
+		line-height: 1.5;
+		margin: 10px 0;
+		padding-left: 20px;
+	}
+.wp-content-img ul {
+  list-style: disc;
+  margin-left: 20px;
+}
+
+.wp-content-img li {
+  margin-bottom: 10px;
+}
 	@media only screen and (max-width: 600px) {
 		.image__grid__container {
 			grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
