--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,29 +22,39 @@
 		font-family: "Inter Variable", sans-serif;
 		background-color: #e8e8ea;
 	}
+
 	.hover-3 {
 		display: inline-flex;
 		padding-top: 10px;
 		padding-bottom: 5px;
 		overflow: hidden;
-		position: relative; /* Add this to position the :before element relative to this container */
+		position: relative;
+		/* Add this to position the :before element relative to this container */
 	}
 
 	.hover-3:before {
-		content: ""; /* Add this to make the :before element appear */
-		position: absolute; /* Add this to position the :before element */
+		content: "";
+		/* Add this to make the :before element appear */
+		position: absolute;
+		/* Add this to position the :before element */
 		left: 0;
 		bottom: 0;
 		width: 100%;
 		height: 2px;
 		background: #492059;
 		transform: translateX(-100%);
-		transition: transform 0.3s ease; /* Add this for smooth transition */
+		transition: transform 0.3s ease;
+		/* Add this for smooth transition */
+	}
+
+	footer .hover-3:before {
+		background: #ff5757;
 	}
 
 	.hover-3:hover:before {
 		transform: translateX(0);
 	}
+
 	.brand__box {
 		@apply justify-center flex flex-col p-6 w-[150px] h-[150px] border-black border-2 border-r-0 items-center;
 	}
@@ -59,6 +69,7 @@
 	.smally {
 		margin-right: auto;
 	}
+
 	.secondary.smally {
 		img {
 			object-fit: contain;
@@ -77,11 +88,13 @@
 		max-width: 800px;
 		border-radius: 10px;
 	}
+
 	.wp-content-img mark {
 		background-color: #ff5757 !important;
 		color: white;
 		padding: 3px;
 	}
+
 	.wp-content-img .wp-block-image {
 		display: flex;
 		margin: 1rem auto;
@@ -91,6 +104,7 @@
 	.wp-content-img .wp-block-quote {
 		border-left: 4px solid #ff5757;
 	}
+
 	.wp-content-img .wp-block-quote p {
 		font-size: 1.5rem;
 		font-weight: 400;
@@ -98,6 +112,7 @@
 		margin: 10px 0;
 		padding-left: 20px;
 	}
+
 	.wp-content-img ul {
 		list-style: disc;
 		margin-left: 20px;
@@ -105,6 +120,9 @@
 
 	.wp-content-img li {
 		margin-bottom: 10px;
+	}
+	a.border-effect::after {
+		display: none;
 	}
 	@media only screen and (max-width: 600px) {
 		.image__grid__container {
@@ -115,11 +133,29 @@
 			overflow-x: scroll;
 			margin: 3rem 0;
 		}
+
 		.highlight {
 			grid-column: 1;
 			grid-row: 1;
 			white-space: normal;
 			display: inline-block;
 		}
+	}
+}
+@media only screen and (max-width: 1024px) {
+  
+	a.border-effect {
+		position: relative;
+	}
+
+	a.border-effect::after {
+		display: block;
+		content: "";
+		background: white;
+		width: 1px;
+		height: 87px;
+		position: absolute;
+		right: -22px;
+		top: -17px;
 	}
 }
