--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,12 @@
 
 /* Layout */
 @layer components {
-html, body {
-	scroll-behavior: smooth;
-}
+
+	html,
+	body {
+		scroll-behavior: smooth;
+	}
+
 	@font-face {
 		font-family: "gothic";
 		font-style: normal;
@@ -124,9 +127,11 @@ html, body {
 	.wp-content-img li {
 		margin-bottom: 10px;
 	}
+
 	a.border-effect::after {
 		display: none;
 	}
+
 	@media only screen and (max-width: 600px) {
 		.image__grid__container {
 			grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
@@ -145,8 +150,61 @@ html, body {
 		}
 	}
 }
+
+.values-card {
+	height: 100%;
+	width: 100%;
+	z-index: 2;
+	aspect-ratio: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	background-color: #f9f9eb;
+	color: var(--theme-color);
+	margin: auto;
+	padding: 3rem;
+	gap: 2rem;
+	transition: all .25s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+	cursor: pointer;
+	position: relative;
+	transform: translate(0px, 0px);
+}
+
+.values-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 3rem;
+	margin: 3rem 0;
+}
+
+.values-inital {
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	opacity: 1;
+}
+
+.values-text-slide {
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	top: 0;
+	padding: 3rem;
+}
+
+.values-card.getter {
+	background-color: #5BD9D6;
+}
+
+.values-card.evolve {
+	background-color: #552497;
+	color: #FBE504;
+}
+
 @media only screen and (max-width: 1024px) {
-  
+
 	a.border-effect {
 		position: relative;
 	}
@@ -161,4 +219,147 @@ html, body {
 		right: -22px;
 		top: -17px;
 	}
+}
+
+.values-card.active .values-text-slide {
+	opacity: 1;
+	top: 20px;
+	transition: all .25s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+}
+
+.values-card.active .values-inital {
+	opacity: 0;
+	transition: all .25s cubic-bezier(0.46, 0.03, 0.52, 0.96);
+}
+
+.values-card.active .mobile-expand-button {
+	transform: rotate(226deg);
+}
+
+@media only screen and (max-width: 800px) {
+  
+    .values-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        margin: 2rem;
+    }
+}
+
+/* Skills CSS directly imported */
+.skills-container img {
+    width: 200px;
+    margin: auto;
+    display: flex;
+}
+
+.skills__block__container {
+    display: flex;
+    margin: 5rem 0;
+}
+
+.skills__tools__left {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.skills__tools__left img {
+    width: 50px;
+    height: 50px;
+    margin: 0;
+}
+
+.skills__tools__left .icons {
+    display: flex;
+    gap: 3rem;
+}
+
+.skills__details {
+    line-height: 1.5;
+}
+
+.skills__details h3 {
+    border-bottom: 3px solid black;
+    width: fit-content;
+}
+
+.skills__details p span {
+    font-weight: bold;
+}
+
+.floater {
+    animation-name: float;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .skills__block__container {
+        flex-direction: column;
+        margin: 3rem 0;
+    }
+
+    .floater {
+        width: 100px !important;
+        margin: 2rem auto !important;
+    }
+
+    .skills__tools__left {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 2rem;
+    }
+
+    .skills__tools__left img {
+        width: 50px;
+        height: 50px;
+        margin: 0;
+    }
+
+    .skills__tools__left .icons {
+        display: flex;
+        gap: 3rem;
+    }
+}
+
+.skills__details span {
+	color: #ff5757;
+}
+
+/* Work timeline direct import */
+.vertical-timeline-element-content {
+    background: #f9f9eb !important;
+}
+
+.vertical-timeline-element-date {
+    color: black !important;
+}
+
+.vertical-timeline-element-content p {
+    font-size: 2rem !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .vertical-timeline-element-content p {
+    font-size: 1.5rem !important;
+}
 }
