--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -367,3 +367,16 @@
 .fullBleed {
 	clip-path: polygon(0 0,100% 0,100% 80%,0 100%);
 }
+
+.dropdown::before {
+	content: '';
+	width: 0;
+	height: 0;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid white;
+	position: absolute;
+	top: -10px;
+	left: 50%;
+	transform: translateX(-50%);
+  }
