--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -368,6 +368,7 @@
 
 .fullBleed {
 	clip-path: polygon(0 0,100% 0,100% 80%,0 100%);
+	background: linear-gradient(220.55deg, #D0004B 0%, #ff5757 100%);
 }
 
 .dropdown::before {
