Add scroll effect to header

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -395,3 +395,8 @@
   .search__input::placeholder{
 	color: #fff !important;
   }
+
+  .fixed {
+    position: fixed;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
